Settings: NetworkL Nameservers: Use toggles

Bug: 746210
Change-Id: Id7019d8e7e6e0f57e93c89a6d34c97af6c569d4d